src/objects/OpportunitySplit.object
<CustomObject>
    <fields>
        <fullName>Closed_Won_Amount__c</fullName>
        <label>Closed Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <formula>(Opportunity_Splits_for_Template__r.Opportunity__r.Probability  * Opportunity_Splits_for_Template__r.Opportunity__r.Amount ) *  SplitPercentage</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Probability * Split Amount</inlineHelpText>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <description>Probability from the Opportunity is stamped onto the Opportunity Split</description>
        <inlineHelpText>Probability from the Opportunity is stamped onto the Opportunity Split</inlineHelpText>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Splits_for_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Splits for Template</label>
        <referenceTo>Opportunity_Splits_for_Templates__c</referenceTo>
        <relationshipLabel>Opportunity Splits</relationshipLabel>
        <relationshipName>Opportunity_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pipeline_Amount__c</fullName>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuoteProposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Opportunity Splits</relationshipLabel>
        <relationshipName>Opportunity_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>